--- a/package.json
+++ b/package.json
@@ -14,7 +14,8 @@
     "cube-ui": "~1.12.15",
     "fastclick": "^1.0.6",
     "qs": "^6.7.0",
-    "vue": "^2.6.10"
+    "vue": "^2.6.10",
+    "vue-lazyload": "^1.3.1"
   },
   "devDependencies": {
     "@vue/cli-plugin-babel": "^3.9.0",
