--- a/package.json
+++ b/package.json
@@ -15,7 +15,8 @@
     "fastclick": "^1.0.6",
     "qs": "^6.7.0",
     "vue": "^2.6.10",
-    "vue-lazyload": "^1.3.1"
+    "vue-lazyload": "^1.3.1",
+    "vue-router": "^3.0.7"
   },
   "devDependencies": {
     "@vue/cli-plugin-babel": "^3.9.0",
