--- a/package.json
+++ b/package.json
@@ -11,13 +11,15 @@
   "dependencies": {
     "axios": "^0.19.0",
     "core-js": "^2.6.5",
+    "create-keyframe-animation": "^0.1.0",
     "cube-ui": "~1.12.15",
     "fastclick": "^1.0.6",
     "moment": "^2.24.0",
     "qs": "^6.7.0",
     "vue": "^2.6.10",
     "vue-lazyload": "^1.3.1",
-    "vue-router": "^3.0.7"
+    "vue-router": "^3.0.7",
+    "vuex": "^3.1.1"
   },
   "devDependencies": {
     "@vue/cli-plugin-babel": "^3.9.0",
