--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
     "create-keyframe-animation": "^0.1.0",
     "cube-ui": "~1.12.15",
     "fastclick": "^1.0.6",
+    "lyric-parser": "^1.0.1",
     "moment": "^2.24.0",
     "qs": "^6.7.0",
     "vue": "^2.6.10",
