--- a/package.json
+++ b/package.json
@@ -29,6 +29,7 @@
     "babel-eslint": "^10.0.1",
     "eslint": "^5.16.0",
     "eslint-plugin-vue": "^5.0.0",
+    "eslint-utils": ">=1.4.1",
     "postcss-px2rem-exclude": "0.0.6",
     "stylus": "^0.54.5",
     "stylus-loader": "^3.0.2",
